Condensing panel header controls

--- a/src/app/partials/panelHeader.html
+++ b/src/app/partials/panelHeader.html
@@ -17,18 +17,18 @@
 
         <span ng-show="panel.editable != false">
             <span confirm-click="row.panels = _.without(row.panels,panel)" confirmation="Are you sure you want to remove this {{panel.type}} panel?" class="pointer">
-                <a title="Remove" alt="Remove" href="" class="icon-remove pointer btn btn-default btn-xs" bs-tooltip="'Remove'"></a>
+                <a title="Remove" alt="Remove" href="" class="icon-remove pointer btn btn-xs" bs-tooltip="'Remove'"></a>
             </span>
         </span>
 
         <span ng-show="panel.editable != false">
             <span bs-modal="panelEditorModal" data-container="body" data-template-url="app/partials/paneleditor.html" class="pointer">
-                <a title="Configure" alt="Configure" href="" class="icon-cog pointer btn btn-default btn-xs"
+                <a title="Configure" alt="Configure" href="" class="icon-cog pointer btn btn-xs"
                     bs-tooltip="'Configure'"></a></span>
         </span>
 
         <span ng-show="panel.transpose_show != undefined && !transpose_show">
-            <a ng-click="flip()" bs-tooltip="'Transpose rows and columns'" class="btn btn-default btn-xs">
+            <a ng-click="flip()" bs-tooltip="'Transpose rows and columns'" class="btn btn-xs">
                 <i class="pointer icon-repeat"></i>
             </a>
         </span>
@@ -36,19 +36,19 @@
         <span ng-repeat="task in panelMeta.modals" ng-show="panel.spyable">
             <span bs-modal="panelEditorModal" data-template-url="{{task.partial}}" class="pointer">
                 <a title="Inspect" alt="Inspect" href="" bs-tooltip="Inspect" ng-class="task.icon"
-                    class="pointer btn btn-default btn-xs"></a>
+                    class="pointer btn btn-xs"></a>
             </span>
         </span>
 
         <!-- bettermap fitBound action -->
         <span ng-show="panel.fitBoundsAuto != undefined && !panel.fitBoundsAuto">
-            <a ng-click="fitBounds()" class="btn btn-default btn-xs"><i tooltip="'fit bound'" class="pointer icon-fire"></i></a>
+            <a ng-click="fitBounds()" class="btn btn-xs"><i tooltip="'fit bound'" class="pointer icon-fire"></i></a>
         </span>
 
         <span class="dropdown" bs-tooltip="'Export'" data-placement="bottom"
             ng-show="panelMeta.exportfile">
             <span class="pointer" class="dropdown-toggle" data-toggle="dropdown">
-                <a title="Save" alt="Save" href="" class="icon-save" class="pointer"></a>
+                <a title="Save" alt="Save" href="" class="icon-save btn btn-xs" class="pointer"></a>
             </span>
             <ul class="dropdown-menu" style="padding:10px; left:-150px;">
                 <h5>Number of Rows</h5>
