--- a/src/app/panels/table/editor.html
+++ b/src/app/panels/table/editor.html
@@ -44,11 +44,11 @@
     <select ng-show="all_fields.length>0"style="width:85%" class="form-control" ng-model="panel.sort[0]" ng-change="set_refresh(true)" ng-options="f for f in all_fields"></select>
     <i ng-click="set_sort(panel.sort[0])" ng-class="{'icon-chevron-up': panel.sort[1] == 'asc','icon-chevron-down': panel.sort[1] == 'desc'}"></i>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-3">
     <h6>Font Size</h6>
     <select class="form-control input-small" ng-model="panel.style['font-size']" ng-options="f for f in ['7pt','8pt','9pt','10pt','12pt','14pt','16pt','18pt','20pt','24pt','28pt','32pt','36pt','42pt','48pt','52pt','60pt','72pt']"></select></span>
   </div>
-  <div class="col-md-2">
+  <div class="col-md-3">
     <h6>Trim Factor <tip>Trim fields to this long divided by # of rows</tip></h6>
     <input type="number" class="form-control input-small" ng-model="panel.trimFactor">
   </div>    
@@ -69,11 +69,11 @@
     <h6>Field for sub-row <tip>This field value will be shown in the sub-row of each event.</tip></h6>
     <input type="text" class="form-control input-medium" ng-model="panel.subrowField" bs-typeahead bs-options="field for field in fields.list">
   </div>
-  <div class="col-md-2" ng-show="panel.enableSubrow">
+  <div class="col-md-3" ng-show="panel.enableSubrow">
     <h6>Max characters <tip>Set the maximum number of characters to be shown in the sub-row.</tip></h6>
     <input type="number" class="form-control input-small" ng-model="panel.subrowMaxChar">
   </div>
-  <div class="col-md-2" ng-show="panel.enableSubrow">
+  <div class="col-md-3" ng-show="panel.enableSubrow">
     <h6>Character offset
       <tip>
         Set the offset (number) from the beginning of the line. For example, 10 means the line will
@@ -110,15 +110,15 @@
     <h6>Display Images <tip>Display images in column(s) that contain URLs to images.</tip></h6>
     <input type="checkbox" ng-model="panel.enableImageField" ng-checked="panel.enableImageField">
   </div>
-  <div class="col-md-4" ng-show="panel.enableImageField">
+  <div class="col-md-3" ng-show="panel.enableImageField">
     <h6>Image Field(s) <tip>Comma separated list of fields that contain image URL.</tip></h6>
     <input type="text" class="form-control input-large" bs-typeahead bs-options="field for field in fields.list" ng-model="panel.imageFields" ng-change="set_refresh(true)" ng-list>
   </div>
-  <div class="col-md-2" ng-show="panel.enableImageField">
+  <div class="col-md-3" ng-show="panel.enableImageField">
     <h6>Image Width <tip>For examples: auto, 85px, or 50%</tip></h6>
     <input type="text" class="form-control input-small" placeholder="e.g. auto, 85px, 50%" ng-model="panel.imgFieldWidth">
   </div>
-  <div class="col-md-2" ng-show="panel.enableImageField">
+  <div class="col-md-3" ng-show="panel.enableImageField">
     <h6>Image Height <tip>For examples: auto, 85px, or 50%</tip></h6>
     <input type="text" class="form-control input-small" placeholder="e.g. auto, 85px, 50%" ng-model="panel.imgFieldHeight">
   </div>
@@ -127,7 +127,7 @@
 <!-- Read-time Auto-refresh Settings -->
 <div class="row">
   <h5>Real-time (Auto-refresh)</h5>  
-  <div class="col-md-2">
+  <div class="col-md-2 checkbox">
     <label><input type="checkbox" ng-model="panel.refresh.enable" ng-checked="panel.refresh.enable">Enable</label>
   </div>
   <div class="col-md-4">
