--- a/src/app/panels/tagcloud/editor.html
+++ b/src/app/panels/tagcloud/editor.html
@@ -25,9 +25,11 @@
         <select class="form-control input-mini" ng-model="panel.fontScale" ng-options="f for f in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]"></select>
     </div>
     <div class="col-md-4">
-        <label>Stop Words
-            <tip>Stop Words will be ignored, if checked.</tip>
-        </label>
-        <input class="form-control input-small" ng-model="panel.ignoreStopWords" type="checkbox" ng-change="set_refresh(true)"></input>
+        <div class="checkbox">
+            <label>
+                <input ng-model="panel.ignoreStopWords" type="checkbox" ng-change="set_refresh(true)"></input>
+                Omit Stop Words <tip>Stop Words will be ignored, if checked.</tip>
+            </label>
+        </div>
     </div>
 </div>
